@@ -7,3 +7,7 @@ sqitch-show-usage - Sqitch show usage statement
   sqitch show <type> <object>
 
 C<< <type> >> can be one of: change, tag, deploy, revert, verify
+
+=head1 Options
+
+ -e --exists        suppress output, exit 0 when object exists
