@@ -50,6 +50,7 @@ Revision history for Perl extension App::Sqitch
        `verify` subdirectories of `~/.sqitch/templates`, You can specify
        `--template-name createtable` to use those templates when adding a
        change.
+     - Added the `--exists` option to the `show` command.
 
 0.973  2013-07-03T13:47:22Z
      - Now Require DBD::SQLite compiled with SQLite 3.7.11 or higher. It
